# marker_pose_detection

./: CMakeLists.txt  LICENSE  package.xml
data/: canyonfwc120_calibration.txt  geniusf100_calibration.txt
include/: viewpoint_estimation_lib.h
launch/: viewpoint_estimation_canyon_fwc120.launch  viewpoint_estimation_genius_f100.launch
src/: viewpoint_estimation.cpp  viewpoint_estimation_lib.cpp
